# cmake-vcpkg-starter

./: CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-single-platform.yml
ports/openssl/: vcpkg.json
src/: client.hpp  main.cpp
